crates/biome_js_analyze/tests/specs/nursery/noPlaywrightNetworkidle/invalid/goto.js
await page.goto('https://example.com', { waitUntil: 'networkidle' });


